plugins {
    id 'java'
    id "me.champeau.jmh" version "0.6.4"
}

group 'org.openjdk.bench'
version '1.0-SNAPSHOT'

sourceCompatibility = targetCompatibility = 15

repositories {
    mavenCentral()
}

compileJmhJava {
    options.compilerArgs << '--add-exports=java.base/sun.security.util=ALL-UNNAMED'
}

dependencies {
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.6.0'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
}

jmh {
//    includes = ['org.openjdk.bench.vm']
    iterations = 5
    warmupIterations = 3
    batchSize = 1
    fork = 2
    resultFormat = 'JSON'
}


test {
    useJUnitPlatform()
}
